--- a/staff_page.html
+++ b/staff_page.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Staff List</title>
+  </head>
+  <body>
+    <section id="staff-Lists">
+      <h2>Sales Department</h2>
+      <div class="staff-list">
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Abdul, Sales Director" />
+          <h3>Abdul</h3>
+          <div>
+            Sales Director <br />
+            Phone: 555-5551
+          </div>
+        </div>
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="David, Sales Associate" />
+          <h3>David</h3>
+          <div>
+            Sales Associate <br />
+            Phone: 555-5552
+          </div>
+        </div>
+      </div>
+      <h2>Service Department</h2>
+      <div class="staff-list">
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Angie, Service Director" />
+          <h3>Angie</h3>
+          <div>
+            Service Director <br />
+            Phone: 555-5553
+          </div>
+        </div>
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Matt, Service Advisor" />
+          <h3>Matt</h3>
+          <div>
+            Service Advisor <br />
+            Phone: 555-5554
+          </div>
+        </div>
+      </div>
+      <h2>Parts Department</h2>
+      <div class="staff-list">
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Chris, parts Director" />
+          <h3>Chris</h3>
+          <div>
+            Parts Director <br />
+            Phone: 555-5555
+          </div>
+        </div>
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Sean, Parts Associate" />
+          <h3>Sean</h3>
+          <div>
+            Parts Associate <br />
+            Phone: 555-5556
+          </div>
+        </div>
+
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Jim, Parts Associate" />
+          <h3>Jim</h3>
+          <div>
+            Parts Associate <br />
+            Phone: 555-5557
+          </div>
+        </div>
+      </div>
+      <h2>Finance Department</h2>
+      <div class="staff-list">
+        <div class="staff">
+          <img src="placeholder_1.jpg" alt="Debbie, Finance Director" />
+          <h3>Debbie</h3>
+          <div>
+            Finance Director <br />
+            Phone: 555-5558
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
